--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
    <h1>To do list</h1>
    <ul>
       <li>Learn to collaborate with GitHub</li>
+      <li>Shoot scumbags</li>
+      <li>Fire Krish</li>
    </ul>
 </body>
 </html>
