--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 <body>
    <h1>To do list</h1>
    <ul>
-      <li><em>Learn to collaborate with GitHub</em></li>
+      <li><strong>Learn to collaborate with GitHub</strong></li>
       <li>Shoot scumbags</li>
       <li>Fire Krish</li>
+      
    </ul>
 </body>
 </html>
