--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
    <h1>To do list</h1>
    <ul>
-      <li><strong>Learn to collaborate with GitHub</strong></li>
+      <li><em>Learn to collaborate with GitHub</em></li>
       <li>Shoot scumbags</li>
       <li>Fire Krish</li>
       
