--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <li><em>Learn to collaborate with GitHub</em></li>
 
       <li>Shoot scumbags</li>
-      <li>Fire Krish</li>
+      <li style="text-decoration: strike-through">Fire Krish</li>
       
    </ul>
 </body>
